# volley-overlay-control

./: .dockerignore  .editorconfig  .env.example  .env.traefik.example  .env.traefik.new.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHENTICATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_OVERLAY.md  CUSTOM_OVERLAY_API.yaml  DEVELOPER_GUIDE.md  Dockerfile  FRONTEND_DEVELOPMENT.md  MOBILE_LANDSCAPE_SPEC.md  README.md  SECURITY.md  alembic.ini  app_storage.py  authentication.py  backend.py  buildozer.spec  clientstorage.py  conf.py  customization.py  customization_page.py  docker-compose.traefik.new.yml  docker-compose.traefik.yml  docker-compose.yml  docker-entrypoint.sh  game_manager.py  gui.py  logging_config.py  main.py  messages.py  oid_dialog.py  (+8 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish-dev.yml  docker-publish-new.yml  docker-publish.yml  release.yml  run-tests.yml
.nicegui/: storage-user-0f2f2c89-8f9c-4924-871d-c8cc90fe7554.json  storage-user-9627b39e-76fb-470e-a3dc-b4b9c14d3ff4.json
app/: app_config.py  app_storage.py  auth_utils.py  authentication.py  backend.py  bootstrap.py  conf.py  config_validator.py  constants.py  customization.py  customization_cache.py  customization_cache_ttl.py  customization_page.py  env_vars_manager.py  game_manager.py  gui.py  gui_update_mixin.py  icons_service.py  id_validation.py  logging_config.py  logging_context.py  logging_utils.py  match_history.py  match_report.py  match_report_access.py  match_report_export.py  match_report_i18n.py  match_report_render.py  match_report_signing.py  match_report_stats.py  match_report_template.py  messages.py  metrics.py  net_guard.py  oid_dialog.py  oid_utils.py  options_dialog.py  overlay_backends.py  overlay_key.py  overlays_service.py  (+12 more)
app/admin/: __init__.py  routes.py  store.py
app/api/: _persistence_paths.py  action_log.py  dependencies.py  game_audit_hooks.py  game_broadcast.py  game_rapid_pair.py  game_service.py  live_stats.py  match_archive.py  match_rules.py  oid_validation.py  preset_categories.py  preset_scopes.py  preset_translation.py  presets_store.py  routes.py  schemas.py  session_manager.py  session_persistence.py  webhook_dead_letter.py  webhooks.py  ws_hub.py
app/auth/: __init__.py  bootstrap.py  dependencies.py  passwords.py  routes.py  schemas.py  service.py  sessions.py
app/components/: button_interaction.py  button_style.py  center_panel.py  control_buttons.py  score_button.py  team_panel.py
app/db/: __init__.py  base.py  engine.py  migrate.py
app/overlay/: __init__.py  auth.py  broadcast.py  locale.py  models.py  routes.py  state_store.py  themes.py
app/overlay_backends/: __init__.py  base.py  custom.py  local.py  uno.py  utils.py
app/pwa/: manifest.json  sw.js
design/icons/: render.mjs  render2.mjs  render3.mjs
docs/: set-indicator-mockups.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/data/: webhooks_dead_letter.jsonl
frontend/schema/: openapi.json
frontend/scripts/: regenerate-icons.sh
frontend/src/: App.css  App.jsx  App.tsx  AppRouter.tsx  PreviewApp.tsx  constants.ts  i18n.jsx  i18n.tsx  main.jsx  main.tsx  theme.js  theme.ts
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_icons.py  0002_overlay_settings.py  0003_drop_overlay_session_meta.py  0003_overlay_control_token.py  0004_overlay_public_control.py  0005_drop_overlay_output_url.py  0006_drop_overlay_match_defaults.py  0007_team_groups_primary.py  0008_overlay_display_name_to_description.py
overlay_static/css/: baseline.css  beach.css  beach_twoline.css  broadcast.css  clear_jersey.css  compact.css  corner_gradient.css  corner_jersey.css  corner_tags.css  corner_wedge.css  corners_shared.css  diagonal.css  esports.css  esports_reference.css  glass.css  jersey_shared.css  led.css  micro.css  mosaic.css  neo_jersey.css  neon.css  original.css  pill.css  pylons.css  pylons_gradient.css  ribbon.css  set_summary.css  shield.css  spectator.css  split.css  split_jersey.css  style.css  style_reference.css  vertical.css
overlay_static/js/: app.js  i18n_labels.js  set_summary.js  spectator.js
overlay_templates/: _spectator.html  base.html  baseline.html  beach.html  beach_twoline.html  broadcast.html  clear_jersey.html  compact.html  corner_gradient.html  corner_jersey.html  corner_tags.html  corner_wedge.html  diagonal.html  esports.html  glass.html  index.html  led.html  micro.html  mosaic.html  neo_jersey.html  neon.html  original.html  pill.html  pylons.html  pylons_gradient.html  ribbon.html  shield.html  split.html  split_jersey.html  vertical.html
react-scoreboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
react-scoreboard/src/: App.css  App.jsx  theme.js
scripts/: generate_openapi.py
scripts/release/: cut_changelog.py
scripts/screenshots/: README.md  capture.mjs  package-lock.json  package.json  run.sh
tests/: conftest.py  pytest.ini  test_action_log.py  test_admin.py  test_admin_users.py  test_api.py  test_api_dependencies.py  test_api_routes.py  test_app_config.py  test_auth.py  test_auth_coverage.py  test_backend.py  test_body_limit.py  test_bootstrap.py  test_client_log.py  test_config_validator.py  test_constants.py  test_control_token.py  test_coverage_proposals.py  test_customization.py  test_db_migrations.py  test_env_docs.py  test_env_vars_manager.py  test_error_middleware.py  test_game_manager.py  test_hashed_credentials.py  test_icons_api.py  test_icons_service.py  test_integration_match_flow.py  test_links_latest_match.py  test_live_stats.py  test_logging_config.py  test_logging_context.py  test_low_priority_hardening.py  test_match_archive.py  test_match_history.py  test_match_report.py  test_match_report_i18n.py  test_match_rules.py  test_matches_routes.py  (+32 more)
tests/fixtures/: base_customization.json  base_model.json  endgame_model.json  manual_overlay.json  (+3 more)
(+327 files in other folders)
