[project]
name = "volley-overlay-control"
version = "0.0.0"
description = "Self-hostable web application for controlling volleyball overlays."
requires-python = ">=3.11"

[tool.ruff]
line-length = 127
target-version = "py311"
extend-exclude = [
    "frontend",
    "overlay_static",
    "overlay_templates",
    "app/admin/static",
    "scripts/generate_openapi.py",
]

[tool.ruff.lint]
# Close to ruff defaults (E, F) plus whitespace (W), import order (I), and
# the bugbear ruleset (B) for likely-bug patterns. E501 stays off because long
# URLs/fixture strings are common in tests and overlay payloads.
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E501",
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection helpers are intentionally called in default
# arguments — that's the framework contract, not a bug. Whitelist them so B008
# keeps catching genuine mistakes elsewhere.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
# Empty default hooks on OverlayBackend are deliberately no-ops, not abstract.
"app/overlay_backends/base.py" = ["B027"]
# ``pytest.raises(Exception)`` is used in a websocket-close smoke test where
# the exact Starlette exception is an implementation detail.
"tests/test_api_routes.py" = ["B017"]

[tool.mypy]
# Core API + routes + middleware are now clean; keep the list explicit so we
# stay in control of what gets type-checked and expand module-by-module.
files = [
    "app/api/session_manager.py",
    "app/api/game_service.py",
    "app/api/schemas.py",
    "app/api/ws_hub.py",
    "app/api/routes",
    "app/api/middleware",
]
python_version = "3.11"
follow_imports = "silent"
ignore_missing_imports = true
implicit_optional = true
# Permissive baseline — flip these on a module-by-module basis once the core is clean.
disallow_untyped_defs = false
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
log_cli = false
log_level = "WARNING"

[tool.bandit]
# Skip ``B101`` (asserts in test code) and ``B311`` (random for non-crypto)
# globally — both are deliberate in our codebase.
skips = ["B101", "B311"]
exclude_dirs = ["tests", "frontend", "scripts"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
