[project]
name = "volley-overlay-control"
version = "0.0.0"
description = "Self-hostable web application for controlling volleyball overlays."
requires-python = ">=3.11"

[tool.ruff]
line-length = 127
target-version = "py311"
extend-exclude = [
    "frontend",
    "overlay_static",
    "overlay_templates",
    "app/admin/static",
    "scripts/generate_openapi.py",
]

[tool.ruff.lint]
# Active rule families:
#   E/F/W       — pycodestyle + pyflakes basics
#   I           — import order
#   B           — flake8-bugbear (likely-bug patterns)
#   UP          — pyupgrade (modern Python idioms)
#   C90         — mccabe complexity (high cap, only catches egregious cases)
#   RUF         — ruff-specific (dangling tasks, unsorted ``__all__`` …)
#   SIM         — flake8-simplify (collapsible ifs, redundant code)
#
# E501 stays off because long URLs and fixture strings are common in tests and
# overlay payloads.
select = ["E", "F", "W", "I", "B", "UP", "C90", "RUF", "SIM"]
ignore = [
    "E501",
    # Codepoints the author actually intends (em dashes, smart quotes, the
    # 169.254.169.254 etc. literals we use in security tests). Manual triage
    # is more useful than a global rename so we keep these off.
    "RUF001",
    "RUF002",
    "RUF003",
    # Mutable default class attributes (mostly the existing
    # ``_connections: dict = {}`` pattern on classmethod-only registries).
    # Real but pre-existing; tighten in a follow-up.
    "RUF012",
    # Implicit Optional in function signatures — large mechanical sweep.
    # Kept off until a dedicated typing pass.
    "RUF013",
    # ``str, Enum`` → ``StrEnum`` is a behaviour change (str() output) and
    # would need test coverage of the enum boundary; defer to refactor PR.
    "UP042",
    # Style preferences inside SIM that produce one-line ternaries which can
    # be harder to read than the original if/else.
    "SIM108",
    "SIM102",
    "SIM103",
    # try/except/pass → contextlib.suppress: the existing blocks carry
    # ``# nosec B110`` annotations consumed by Bandit and explanatory
    # comments; rewriting them mechanically would drop both.
    "SIM105",
]

[tool.ruff.lint.mccabe]
# Generous cap — flags only the genuinely-too-complex functions. The two
# pre-existing offenders (``app/match_report.py::_compute_stats``,
# ``app/overlay/routes.py::create_overlay_router``) are silenced via
# per-file-ignores below until the structural-refactor PR lands.
max-complexity = 18

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection helpers are intentionally called in default
# arguments — that's the framework contract, not a bug. Whitelist them so B008
# keeps catching genuine mistakes elsewhere.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
# Empty default hooks on OverlayBackend are deliberately no-ops, not abstract.
"app/overlay_backends/base.py" = ["B027"]
# ``pytest.raises(Exception)`` is used in a websocket-close smoke test where
# the exact Starlette exception is an implementation detail.
"tests/test_api_routes.py" = ["B017"]
# Two pre-existing god-functions exceed the mccabe cap. They are tracked
# for a structural refactor (``match_report.py`` split, overlay router
# decomposition); ignore C901 here so the rule still gates the rest of
# the codebase.
"app/match_report.py" = ["C901"]
"app/overlay/routes.py" = ["C901"]

[tool.mypy]
# Core API + routes + middleware are now clean; keep the list explicit so we
# stay in control of what gets type-checked and expand module-by-module.
files = [
    "app/api/session_manager.py",
    "app/api/game_service.py",
    "app/api/game_broadcast.py",
    "app/api/game_audit_hooks.py",
    "app/api/game_rapid_pair.py",
    "app/api/schemas.py",
    "app/api/ws_hub.py",
    "app/api/webhooks.py",
    "app/api/action_log.py",
    "app/api/routes",
    "app/api/middleware",
    "app/id_validation.py",
    "app/customization_cache_ttl.py",
    "app/state.py",
    "app/game_manager.py",
    "app/customization.py",
    "app/customization_cache.py",
    "app/backend.py",
    "app/conf.py",
    "app/oid_utils.py",
    "app/env_vars_manager.py",
    "app/app_storage.py",
    "app/logging_config.py",
    "app/logging_context.py",
    "app/logging_utils.py",
    "app/match_report_i18n.py",
    "app/match_report_signing.py",
    "app/match_report_template.py",
    "app/password_hash.py",
    "app/auth_utils.py",
    "app/security_bootstrap.py",
    "app/overlay/state_store.py",
    "app/overlay/routes.py",
    "app/overlay_backends",
]
python_version = "3.11"
follow_imports = "silent"
ignore_missing_imports = true
implicit_optional = true
# Permissive baseline — flip these on a module-by-module basis once the core is clean.
disallow_untyped_defs = false
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true

# ``requests`` ships its own stubs as ``types-requests`` but the project
# doesn't depend on it. ``ignore_missing_imports`` covers most cases, but
# the ``import-untyped`` error code is separate; silence it just for these
# import sites.
[[tool.mypy.overrides]]
module = ["requests", "requests.*", "websocket", "websocket._exceptions"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
log_cli = false
log_level = "WARNING"

[tool.bandit]
# Skip ``B101`` (asserts in test code) and ``B311`` (random for non-crypto)
# globally — both are deliberate in our codebase.
skips = ["B101", "B311"]
exclude_dirs = ["tests", "frontend", "scripts"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
